# secured-claude

./: .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.broker  Dockerfile.cerbos  Dockerfile.claude-code  Dockerfile.dns-filter  Dockerfile.egress-proxy  LICENSE  README.md  SECURITY.md  TASKS.md  docker-compose.ci.yml  docker-compose.yml  install.ps1  install.sh  pyproject.toml  renovate.json
.config/: lefthook.yml
.gitlab-ci/: build.yml  lint.yml  publish.yml  release.yml  security.yml  smoke.yml  test.yml
.well-known/: security.txt
cerbos/: config.yaml
config/: principals.yaml
docker/: dnsmasq.conf  entrypoint.sh  settings.template.json  tinyproxy-filter.txt  tinyproxy.conf
docs/adr/: 0000-template.md  0001-cerbos-as-policy-decision-point.md  0002-pretooluse-hook-as-interception-point.md  0003-default-deny-for-shell-network-mcp.md  0004-append-only-sqlite-audit-log.md  0005-containerised-claude-code.md  0006-host-side-broker.md  0007-cross-platform-via-docker-sdk.md  0008-pin-upstream-images-and-deps.md  0009-hook-fails-closed.md  0010-network-egress-filter-allowlist.md  0011-no-secret-baked-in-image.md  0012-defense-in-depth-layers.md  0013-gitlab-mono-repo-v01.md  0014-gitlab-ci-pipeline-6-stages.md  0015-distribution-pipx-gitlab-registry.md  0016-supply-chain-cosign-sbom.md  0017-security-testing-evidence-pipeline.md  0018-hatch-vcs-version-from-git-tag.md  0019-l2-egress-proxy-tinyproxy.md  0020-l3-dns-allowlist-dnsmasq.md  0021-pin-claude-code-npm-version.md  0022-intent-layer-vs-confinement-layers.md  0023-release-asset-links-verifiable-from-outside.md  0024-hash-chain-audit-log.md  0025-pre-built-sidecar-images.md  0026-runtime-smoke-ci-gate.md  0027-multi-principal-directory.md  0028-multi-arch-images-manifest-list.md  0029-external-hash-anchor.md  0030-real-llm-smoke-manual-trigger.md  0031-principal-validate-cli.md  0032-auto-anchor-cron-templates.md  0033-broker-containerised-for-ci-smoke.md  0034-principal-provider-abstraction.md  0035-bake-sidecar-configs.md  0036-cerbos-image-bake.md  0037-http-principals-cache-and-bearer-auth.md  0038-jwt-validation-and-oidc-discovery.md  0039-max-stale-age-for-cache-and-jwks.md  (+9 more)
docs/dev/: README.md  agent-container-debug.md  developer-environment.md
docs/security/: controls-matrix.md  security-evidence.md  supply-chain.md  threat-model.md  vulnerability-disclosure.md
policies/: mcp.yaml  network.yaml
src/secured_claude/: __init__.py  __main__.py  _paths.py  audit.py  audit_demo.py  cerbos_client.py  cli.py  gateway.py  hook.py  hook_post.py  metrics.py  oidc.py  orchestrator.py  principals.py  redaction.py  store.py
src/secured_claude/policy_templates/: __init__.py
src/secured_claude/policy_templates/developer-default/: derived_roles.yaml  filesystem.yaml  mcp.yaml  shell.yaml
src/secured_claude/policy_templates/enterprise-strict/: filesystem.yaml  mcp.yaml  network.yaml  shell.yaml
tests/: conftest.py  test_audit.py  test_audit_demo.py  test_cerbos_client.py  test_cli.py  test_fail_closed.py  test_gateway.py  test_gateway_extra.py  test_hook_format.py  test_hook_inproc.py  test_metrics.py  test_oidc.py  test_orchestrator.py  test_paths.py  test_paths_extra.py  test_principals.py  test_redaction.py  test_security_config.py  test_store.py  test_store_extra.py
